<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding= "@dimen/common_spacing_medium">


    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/common_spacing_medium"
        android:layout_marginEnd="@dimen/common_spacing_medium"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:text="nmedia" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing_medium"
        android:layout_marginEnd="@dimen/common_spacing_medium"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@string/icon_data" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_centerInParent="true"
        android:contentDescription="description_post_author_avatar"
        android:src="@drawable/large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.App.MenuCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:checkable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/upper_menu_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_spacing_large"
        app:constraint_referenced_ids="avatar, published" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_medium"
        android:autoLink="web"
        app:constraint_referenced_ids="background_video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upper_menu_barrier"
        tools:text="@string/text" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/play_video_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="background_video, play" />

    <ImageButton
        android:id="@+id/background_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_medium"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_background_video"
        android:src="@drawable/ic_baseline_video_file_24"
        app:layout_constraintEnd_toEndOf="@id/play_video_group"
        app:layout_constraintStart_toStartOf="@id/play_video_group"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_play"
        android:src="@drawable/ic_baseline_play_circle_24"
        app:layout_constraintBottom_toBottomOf="@id/background_video"
        app:layout_constraintEnd_toEndOf="@id/background_video"
        app:layout_constraintStart_toStartOf="@id/background_video"
        app:layout_constraintTop_toTopOf="@id/background_video" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/downer_menu_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_spacing_medium"
        app:constraint_referenced_ids="content, background_video" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_medium"
        android:checkable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/downer_menu_barrier"
        tools:text="999" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.ShareCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing_medium"
        android:layout_marginTop="@dimen/common_spacing_medium"
        android:checkable="true"
        android:contentDescription="@string/description_share"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/downer_menu_barrier"
        tools:text="990"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view"
        style="@style/Widget.AppTheme.ViewCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_medium"
        android:checkable="false"
        android:contentDescription="@string/description_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/downer_menu_barrier"
        tools:text="999"
        />


</androidx.constraintlayout.widget.ConstraintLayout>